// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CharacterCard Component > renders character details correctly 1`] = `
<div>
  <div
    class="group relative overflow-hidden rounded-xl bg-white/5 backdrop-blur-md border border-[#8ED959]/20 shadow-[0_8px_32px_0_rgba(142,217,89,0.1)] xl:w-[180px] 2xl:w-full h-[400px] cursor-pointer transition-all duration-300 hover:shadow-[0_8px_32px_0_rgba(142,217,89,0.25)] hover:border-[#8ED959]/40"
  >
    <div
      class="relative z-10"
    >
      <div
        class="relative mt-0 mb-3 w-full overflow-hidden rounded-t-lg"
      >
        <img
          alt="Rick Sanchez"
          class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-110"
          data-nimg="1"
          decoding="async"
          height="200"
          loading="eager"
          src="/_next/image?url=https%3A%2F%2Fexample.com%2Frick.jpg&w=640&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Frick.jpg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Frick.jpg&w=640&q=75 2x"
          style="color: transparent;"
          width="200"
        />
        <div
          class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent"
        />
        <div
          class="absolute inset-0 bg-gradient-to-t from-[#8ED959]/20 to-transparent opacity-0 transition-opacity duration-300 group-hover:opacity-100"
        />
      </div>
      <h3
        class="mb-2 px-4 font-semibold text-base text-white"
      >
        Rick Sanchez
      </h3>
      <div
        class="px-4"
      >
        <span
          class="border rounded-lg px-2 capitalize bg-green-500/20 text-green-300 border-green-500/50"
        >
          alive
        </span>
        <p>
          Specie: 
          Human
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CharacterCard Component > renders with isSelected true 1`] = `
<div>
  <div
    class="group relative overflow-hidden rounded-xl bg-white/5 backdrop-blur-md border border-[#8ED959]/20 shadow-[0_8px_32px_0_rgba(142,217,89,0.1)] xl:w-[180px] 2xl:w-full h-[400px] cursor-pointer transition-all duration-300 hover:shadow-[0_8px_32px_0_rgba(142,217,89,0.25)] hover:border-[#8ED959]/40 border-2 border-[#590F4D] hover:border-[#590F4D]"
  >
    <div
      class="relative z-10"
    >
      <div
        class="relative mt-0 mb-3 w-full overflow-hidden rounded-t-lg"
      >
        <img
          alt="Rick Sanchez"
          class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-110"
          data-nimg="1"
          decoding="async"
          height="200"
          loading="eager"
          src="/_next/image?url=https%3A%2F%2Fexample.com%2Frick.jpg&w=640&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Frick.jpg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Frick.jpg&w=640&q=75 2x"
          style="color: transparent;"
          width="200"
        />
        <div
          class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent"
        />
        <div
          class="absolute inset-0 bg-gradient-to-t from-[#8ED959]/20 to-transparent opacity-0 transition-opacity duration-300 group-hover:opacity-100"
        />
      </div>
      <h3
        class="mb-2 px-4 font-semibold text-base text-white"
      >
        Rick Sanchez
      </h3>
      <div
        class="px-4"
      >
        <span
          class="border rounded-lg px-2 capitalize bg-green-500/20 text-green-300 border-green-500/50"
        >
          alive
        </span>
        <p>
          Specie: 
          Human
        </p>
      </div>
    </div>
  </div>
</div>
`;
